Fixed a sizing issue in IE with the award pile.

--- a/src/styles/slides/detail/_detail.sass
+++ b/src/styles/slides/detail/_detail.sass
@@ -307,7 +307,7 @@
             background-color: $black
             overflow: hidden
             user-select: none
-            cursor: col-resize
+            cursor: ew-resize
 
             .slider
               position: absolute
