--- a/src/styles/slides/_slide.sass
+++ b/src/styles/slides/_slide.sass
@@ -12,7 +12,7 @@
     width: 100%
     height: 100%
     overflow: hidden
-    cursor: row-resize
+    cursor: ns-resize
 
     &.cover
       background-image: url(../images/loading@2x.gif)
