Tried to fix the Safari color shift issue, got closer ... giving up.

--- a/src/styles/app.sass
+++ b/src/styles/app.sass
@@ -13,6 +13,7 @@
 @import "transition"
 @import "watch-video"
 @import "slides/slide"
+@import "slides/cover"
 @import "slides/home-feature"
 @import "slides/work-feature"
 @import "slides/detail/detail"
