--- a/src/styles/_page-nav.sass
+++ b/src/styles/_page-nav.sass
@@ -66,6 +66,7 @@
               height: 100%
               font: normal normal normal 11px/33px $avenir_regular
               color: $white
+              overflow: hidden
               display: inline-block
 
               transform: translate3d(0,0,0)
@@ -78,6 +79,15 @@
               &:nth-of-type(2)
                 margin: 0 0 0 10px
                 color: $gray
+
+              svg
+                position: absolute
+                top: 50%
+                left: 50%
+                width: 88px
+                height: 22px
+                transform: translate(-50%, -50%)
+                fill: $white
 
             @include respond-above($media_480)
               @include respond-above-ht($media_ht_480)
@@ -95,9 +105,16 @@
                 h4
                   font: normal normal normal 14px/42px $avenir_regular
 
+                  svg
+                    width: 112px
+                    height: 28px
+
           a.active
             h4
               color: $black
+
+              svg
+                fill: $black
 
           a.active
             cursor: default
@@ -147,6 +164,9 @@
                   &.active
                     h4
                       color: $white
+
+                      svg
+                        fill: $white
 
                     span.black-bar
                       transform: translate3d(0px,0,0)
