--- a/src/styles/slides/_slide.sass
+++ b/src/styles/slides/_slide.sass
@@ -12,10 +12,40 @@
     width: 100%
     height: 100%
     overflow: hidden
-    cursor: grab
+    cursor: row-resize
 
-    &:active
-      cursor: grabbing
+    &.cover
+      background-image: url(../images/loading@2x.gif)
+      background-repeat: no-repeat
+      background-position: 50% 50%
+      background-size: 50px 50px
+
+      // ---------------------------------------------
+      // Shared styles: Cover
+      // ---------------------------------------------
+
+      .cover-wrap
+        position: absolute
+        top: 50%
+        left: 50%
+        width: auto
+        height: auto
+        min-width: 100%
+        min-height: 100%
+        background-repeat: no-repeat
+        background-position: 50% 50%
+        background-size: contain
+        transform: translate(-50%, -50%)
+        display: none
+
+        canvas
+          position: absolute
+          top: 0px
+          left: 50%
+          width: auto
+          height: 100%
+
+          transform: translate(-50%, 0)
 
     // ---------------------------------------------
     // Shared styles: Picture zone
