--- a/src/styles/slides/_slide.sass
+++ b/src/styles/slides/_slide.sass
@@ -12,7 +12,10 @@
     width: 100%
     height: 100%
     overflow: hidden
-    cursor: row-resize
+    cursor: grab
+
+    &:active
+      cursor: grabbing
 
     // ---------------------------------------------
     // Shared styles: Picture zone
