--- a/src/styles/slides/_cover.sass
+++ b/src/styles/slides/_cover.sass
@@ -63,6 +63,12 @@
             width: 100%
             height: 100%
 
+      a
+        position: absolute
+        top: 100px
+        left: 100px
+        text-transform: capitalize
+
 // Blends for Safari color shift w/ video
 .slide#home-landing
   .cnv-wrap
