float left fixes safari vertical shift, by shift i mean shit

--- a/src/styles/_page-nav.sass
+++ b/src/styles/_page-nav.sass
@@ -62,12 +62,12 @@
               display: none
 
             h4
+              float: left
               position: relative
               height: 100%
               font: normal normal normal 11px/33px $avenir_regular
               color: $white
               overflow: hidden
-              display: inline-block
 
               transform: translate3d(0,0,0)
               transition: color $speed $ease_out
