--- a/src/styles/slides/_cover.sass
+++ b/src/styles/slides/_cover.sass
@@ -59,126 +59,111 @@
           width: 100%
           height: 100%
 
-  // Plain Jane
-  &.animation-cover
+    a
+      position: absolute
+      top: 50%
+      left: 50%
+      width: 76px
+      padding: 0 0 8px
+      text-align: center
+      font: normal normal normal 15px/15px $avenir_regular
+      white-space: nowrap
+
+      transform: translate(-50%,-50%)
+
+      &:after
+        content: ''
+        position: absolute
+        bottom: 0px
+        left: 0px
+        width: 100%
+        height: 3px
+        background-color: $black
+
+      .play-btn
+        position: relative
+        width: 74px
+        height: 74px
+
+        span:first-child
+          position: absolute
+          top: 10px
+          left: 10px
+          right: 10px
+          bottom: 10px
+          border: 3px solid $black
+          border-radius: 50%
+
+        span:last-child
+          position: absolute
+          top: 50%
+          left: 50%
+          width: 0
+          height: 0
+          margin: 0
+          border-top: 8px solid transparent
+          border-bottom: 8px solid transparent
+          border-left: 13px solid $white
+
+          transform: translate(-4px,-8px)
+
+body.party-on
+  .slide
     .slide-inner.cover
       a
-        position: absolute
-        top: 50%
-        left: 100px
-        width: 76px
-        padding: 0 0 8px
-        text-align: center
-        font: normal normal normal 12px/12px $avenir_bold
-        white-space: nowrap
+        left: 20px
+        width: 50px
+        font: normal normal normal 12px/12px $avenir_regular
 
         transform: translate(0,-50%)
 
         &:after
-          content: ''
-          position: absolute
-          bottom: 0px
-          left: 0px
-          width: 100%
-          height: 3px
-          background-color: $black
           opacity: 0.2
-
           transition: opacity $speed $ease_out
-
-        .cool-shape
-          position: relative
-          width: 74px
-          height: 74px
-
-          span:first-child
-            position: absolute
-            top: 10px
-            left: 10px
-            right: 10px
-            bottom: 10px
-            border: 3px solid $black
-            border-radius: 50%
-
-          span:last-child
-            position: absolute
-            top: 50%
-            left: 50%
-            width: 0
-            height: 0
-            margin: 0
-            border-top: 8px solid transparent
-            border-bottom: 8px solid transparent
-            border-left: 13px solid $black
-
-            transform: translate(-4px,-8px)
 
         &:hover
           &:after
             opacity: 1
 
-        @include respond-above($media_768)
-          @include respond-above-ht($media_ht_560)
-            font: normal normal normal 15px/15px $avenir_bold
-
-  // Buzzsaw Vibrations
-  &.interactive-cover
-    .slide-inner.cover
-      a
-        position: absolute
-        top: 50%
-        left: 100px
-        height: 54px
-        padding-left: 64px
-        white-space: nowrap
-        font: normal normal normal 12px/60px $avenir_bold
-
-        transform: translate(0,-50%)
-
-        .cool-shape
-          position: absolute
-          top: 0px
-          left: 0px
-          width: 54px
-          height: 100%
+        .play-btn
+          width: 50px
+          height: 50px
+          margin: 0 0 6px
 
           span:first-child
-            position: absolute
             top: 0px
             left: 0px
-            width: 100%
-            height: 100%
-            background-image: url('/images/play-reel-icon.png')
-            background-repeat: no-repeat
-            background-position: center center
-            background-size: cover
+            right: 0px
+            bottom: 0px
 
-          span:last-child
-            position: absolute
-            top: 50%
-            left: 50%
-            width: 0
-            height: 0
-            margin: 0
-            border-top: 8px solid transparent
-            border-bottom: 8px solid transparent
-            border-left: 13px solid $black
-
-            transform: translate(-4px,-8px)
-
-        &:hover
-          animation: shake 100ms linear infinite
-
-          .cool-shape
-            span:first-child
-              animation: shake 50ms linear infinite
-
-            span:last-child
-              animation: shake 5s linear infinite
+        @include respond-above($media_480)
+          left: 40px
 
         @include respond-above($media_768)
-          @include respond-above-ht($media_ht_560)
-            font: normal normal normal 15px/60px $avenir_bold
+          left: 60px
+
+          @include respond-above-ht($media_ht_480)
+            width: 76px
+            font: normal normal normal 15px/15px $avenir_regular
+
+            .play-btn
+              width: 74px
+              height: 74px
+              margin: 0
+
+              span:first-child
+                top: 10px
+                left: 10px
+                right: 10px
+                bottom: 10px
+
+        @include respond-above($media_1180)
+          left: 100px
+
+        // @media all and (max-aspect-ratio: 1/1)
+        //   left: 50%
+
+        //   transform: translate(-50%,-50%)
 
 // Blends for Safari color shift w/ video
 .slide#home-landing
