remove old commented out stuff

--- a/src/styles/slides/_cover.sass
+++ b/src/styles/slides/_cover.sass
@@ -107,6 +107,7 @@
 
           transform: translate(-4px,-8px)
 
+// Desktop override play reel btn position
 body.party-on
   .slide
     .slide-inner.cover
@@ -159,11 +160,6 @@ body.party-on
 
         @include respond-above($media_1180)
           left: 100px
-
-        // @media all and (max-aspect-ratio: 1/1)
-        //   left: 50%
-
-        //   transform: translate(-50%,-50%)
 
 // Blends for Safari color shift w/ video
 .slide#home-landing
