--- a/src/styles/slides/_cover.sass
+++ b/src/styles/slides/_cover.sass
@@ -22,7 +22,11 @@
       left: 0px
       width: 100%
       height: 100%
+      background-repeat: no-repeat
+      background-position: 50% 50%
+      background-size: cover
       opacity: 0
+
       transition: opacity $speed_metal linear
 
       &.roll
@@ -32,9 +36,6 @@
         position: absolute
         top: 0px
         left: 50%
-        background-repeat: no-repeat
-        background-position: 50% 50%
-        background-size: contain
         transform: translate(-50%, 0)
 
         &.blend:before,
