--- a/src/styles/slides/_cover.sass
+++ b/src/styles/slides/_cover.sass
@@ -24,10 +24,13 @@
       height: 100%
       background-repeat: no-repeat
       background-position: 50% 50%
-      background-size: cover
+      background-size: 142% auto
       opacity: 0
 
       transition: opacity $speed_metal linear
+
+      @media all and (min-aspect-ratio: 1/1)
+        background-size: auto 100%
 
       &.roll
         opacity: 1
@@ -56,7 +59,8 @@
           right: 0px
           transform: rotate(180deg)
 
-        canvas
+        video
+          display: none
           width: 100%
           height: 100%
 
