--- a/src/styles/slides/_work-feature.sass
+++ b/src/styles/slides/_work-feature.sass
@@ -383,25 +383,31 @@
             display: block
 
           &.web
-            width: 25px
+            width: 30px
 
           &.animation
-            width: 16px
+            width: 18px
+
+          &.two-dimensional
+            width: 20px
 
           &.three-dimensional
             width: 18px
+
+          &.cel
+            width: 26px
           
           &.experiential
-            width: 18px
+            width: 20px
 
           &.illustration
-            width: 18px
+            width: 20px
 
           &.live-action
-            width: 18px
+            width: 20px
 
           &.game
-            width: 29px
+            width: 33px
 
           &.sound
             width: 14px
