A bunch of post launch optimizations / fixes.

--- a/src/styles/slides/_work-feature.sass
+++ b/src/styles/slides/_work-feature.sass
@@ -363,9 +363,9 @@
               margin-left: -30px
 
           &.icon-kfc
-            width: 68px
+            width: 15px
             svg
-              margin-left: -6px
+              margin-left: -32px
 
       &.mediums
         width: auto
@@ -395,8 +395,10 @@
             width: 18px
 
           &.cel
-            width: 26px
-          
+            height: 18px
+            margin-top: 1px
+            width: 23px
+
           &.experiential
             width: 20px
 
