Added text rendering css directive.

--- a/src/styles/slides/_home-feature.sass
+++ b/src/styles/slides/_home-feature.sass
@@ -47,6 +47,7 @@
         margin-bottom: 12px
         font: normal normal normal 18px/18px $avenir_bold
         color: $black
+        text-rendering: optimizeLegibility
 
         @include respond-above($media_ht_360)
           font: normal normal normal 20px/24px $avenir_bold
