--- a/src/styles/slides/_work-feature.sass
+++ b/src/styles/slides/_work-feature.sass
@@ -45,6 +45,7 @@
         font: normal normal normal 24px/30px $avenir_bold
         overflow: hidden
         opacity: 0
+        text-rendering: optimizeLegibility
 
         transform: translate3d(0px, 0px, 0px)
 
