--- a/src/styles/slides/_cover.sass
+++ b/src/styles/slides/_cover.sass
@@ -63,6 +63,7 @@
           display: none
           width: 100%
           height: 100%
+          opacity: 0.99
 
     a
       position: absolute
