Client logos for Einstein Bros.

--- a/src/styles/slides/_work-feature.sass
+++ b/src/styles/slides/_work-feature.sass
@@ -342,6 +342,12 @@
           &.icon-leo
             width: 80px
 
+          &.icon-einstein-bros
+            width: 25px
+
+          &.icon-fear-not
+            width: 48px
+
       &.mediums
         width: auto
 
