Reset and Job links

--- a/src/styles/app.sass
+++ b/src/styles/app.sass
@@ -1,5 +1,5 @@
 /* Settings and dependencies */
-@import "../../public/vendor/sass-meyer-reset/sass-meyer-reset"
+@import "reset"
 @import "fonts"
 @import "vars"
 @import "utils"
